--- a/Application.Web/Areas/Admin/Views/Category/_DeleteCategory.cshtml
+++ b/Application.Web/Areas/Admin/Views/Category/_DeleteCategory.cshtml
@@ -3,7 +3,7 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Partial("_ModalHeader", new ModalHeader { Heading = "Delete Category" })
+    @Html.Partial("_ModalHeader", new ModalHeader { Heading = "Delete Menu" })
 
     <div class="modal-body form-horizontal">
         Are you want to delete @Model?
